@@ -229,6 +229,30 @@ class DatabaseMysql extends DatabaseBase {
 	}
 
 	function affectedRows() { return mysql_affected_rows( $this->mConn ); }
+	
+	/**
+	 * Estimate rows in dataset
+	 * Returns estimated count, based on EXPLAIN output
+	 * Takes same arguments as Database::select()
+	 */
+	public function estimateRowCount( $table, $vars='*', $conds='', $fname = 'Database::estimateRowCount', $options = array() ) {
+		$options['EXPLAIN'] = true;
+		$res = $this->select( $table, $vars, $conds, $fname, $options );
+		if ( $res === false )
+			return false;
+		if ( !$this->numRows( $res ) ) {
+			$this->freeResult($res);
+			return 0;
+		}
+
+		$rows = 1;
+		while( $plan = $this->fetchObject( $res ) ) {
+			$rows *= $plan->rows > 0 ? $plan->rows : 1; // avoid resetting to zero
+		}
+
+		$this->freeResult($res);
+		return $rows;		
+	}
 
 	function fieldInfo( $table, $field ) {
 		$table = $this->tableName( $table );
